Fixed overlap switch text for dutch word length

--- a/src/scss/orejime.scss
+++ b/src/scss/orejime.scss
@@ -219,6 +219,7 @@ $orejime-theme-border: 1px solid #C7C7C7 !default; // micro css reset for everyt
 .orejime-AppItem-switch {
   position: absolute;
   left: 0;
+  top: 3px;
   display: inline-block;
   width: 50px;
   height: 30px;
@@ -571,7 +572,7 @@ $orejime-theme-border: 1px solid #C7C7C7 !default; // micro css reset for everyt
       position: relative;
       line-height: 1.25;
       vertical-align: middle;
-      padding-left: 60px;
+      padding-left: 100px;
       min-height: 40px;
       margin-top: 0.7em;
       width: 100%;
@@ -621,6 +622,7 @@ $orejime-theme-border: 1px solid #C7C7C7 !default; // micro css reset for everyt
     .orejime-AppItem-switch {
       position: absolute;
       left: 0;
+      top: 3px;
       display: inline-block;
       width: 50px;
       height: 24px;
